# cryptobot

./: .gitignore  Cargo.toml  README.md  SETUP.md
.github/workflows/: hourly-update.yml
src/: main.rs
