[package]
name = "bitcoin-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.14", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
