[package]
name = "crypto-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.14", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
rusty-money = "0.5.0"
